FIX scrollbars all over the place corrected to use of auto

--- a/css/global.css
+++ b/css/global.css
@@ -220,7 +220,7 @@ input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
 .DESC {display: inline;padding-right: 10px;}
 
 /*Resource Panel layout*/
-.Listview {overflow-x:scroll;	margin: 25px 10px 25px 0;}
+.Listview {overflow-x:auto;	margin: 25px 10px 25px 0;}
 .ListviewTight {margin: 5px 10px 5px 0;}
 .Listview table{ width:100%;}
 .Listview td {padding: 5px 5px 5px 5px;}
