--- a/plugins/rse_responsive/css/main-style.css
+++ b/plugins/rse_responsive/css/main-style.css
@@ -107,7 +107,7 @@
         margin-top:1px;
     }
     .BasicsBox .Question {
-        overflow-x:scroll;
+        overflow-x:auto;
     }
 
 }
@@ -742,7 +742,7 @@
 }
 @media(max-width:800px) {
     #collectionform .Listview {
-        overflow-x:scroll;
+        overflow-x:auto;
     }
     #collectionform .tools {
         display:none;
@@ -780,7 +780,7 @@
     }
     .Listview {
         margin:0;
-        overflow-x: scroll;
+        overflow-x: auto;
     }
     #submissionResponse {padding-left: 20px;}
 }
